--- a/app/assets/stylesheets/api-addicts2.scss
+++ b/app/assets/stylesheets/api-addicts2.scss
@@ -19,13 +19,13 @@
 }
 
 .top-menu-bg {
-  background-color: #002D3F;
+  background-color: #6DB8D1;
   width: 100%;
   height: 100%;
-  padding: 30px;
+  // padding: 30px;
   // box-shadow: inset 0px 0px 2px 2px rgba(0,0,0,0.3);
   border-right: 1px solid white;
-  box-shadow: inset 0px 0px 10px 10px rgba(0,0,0,0.3);
+  // box-shadow: inset 0px 0px 10px 10px rgba(0,0,0,0.3);
 }
 
 .row.full {
@@ -204,10 +204,16 @@
   // padding: 50px;
 }
 
+#search-field{
+  background-color: #7C8C91;
+}
+
 .category-listing:hover{
-  background-color: #2EB6E5;
-  border-style: solid;
-  border-width: 1px;
+  background-color: #FC5A42;
+  // border-style: solid;
+  // -moz-box-sizing: padding-box;
+  box-shadow: 0px 3px 0px white inset;
+  box-shadow: 0px -3px 0px white inset;
 }
 
 .text-fields{
@@ -221,3 +227,80 @@
 .row.full>.columns:first-child { padding-left: 0; }
 .row.full>.column:last-child,
 .row.full>.columns:last-child { padding-right: 0; }
+
+/* Dropdown Button */
+.dropbtn {
+    background-color: #6DB8D1;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    font: {
+      family: Verdana;
+      size: 28px;
+      weight: bold;
+    }
+    color: #002D3F;
+    text-align: center;
+    text-shadow: 2px 2px 4px #000000;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #2EB6E5;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #2EB6E5}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    background-color: #2EB6E5;
+}
+
+@mixin vertical-align($position: relative) {
+  position: $position;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.element p {
+  @include vertical-align();
+}
+
+.top-menu p {
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.circular {
+  border-radius: 90px;
+}
