--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,10 +30,7 @@
       <ul>
         <% @reviews.each do |review| %>
         <li>
-          <%= link_to "Delete Review", user_path(@user, review), method: :delete, data: {confirm: "Really wanna delete this Review?"} %>
-          <%= review.body %>
-          <%= review.rating %>
-          <% end %>
+          <%= link_to "Delete Review", api_review_path(review.api_id, review.id), method: :delete, data: {confirm: "Really wanna delete this Review?"} %>
         </li>
       </ul>
     </div>
