--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <div data-alert class="alert-box <%= flash.keys[0] %>">
-      <div class=flash_messages>
-        <%= display_flash_messages %>
+    <% if flash.keys[0] != nil %>
+      <div data-alert class="alert-box <%= flash.keys[0] %>">
+        <div id="flash_messages">
+          <%= display_flash_messages %>
+        </div>
       </div>
-    </div>
+    <% end %>
     <div class="row full" style="height: 45px;" data-equalizer>
       <div class="medium-12 columns medium-title top-bar float-left" data-equalizer-watch style="background-color: #9E9E9E; text-align: left;">
         API Addicts
@@ -56,5 +58,14 @@
   </head>
   <body>
     <%= yield %>
+
+    <script>
+    window.onload = init();
+
+    function init(){
+      $('.alert-box').slideUp(2500,0);
+    }
+
+    </script>
   </body>
 </html>
