--- a/app/views/apis/index.html.erb
+++ b/app/views/apis/index.html.erb
@@ -4,6 +4,7 @@
         <div class="large-title">
           Trending
         </div>
+        <% @apis = Api.paginate(:page => params[:page], :per_page => 1) %>
         <% @apis.each do |api| %>
           <div class="small-12 columns api-listing text-left detail-text-medium float-center">
             <div class="row">
@@ -15,6 +16,9 @@
             </div>
           </div>
         <% end %>
+        <%= will_paginate @apis,
+        page_links: false,
+        renderer: FoundationPagination::Rails %>
       </div>
       <div class="medium-6 columns categories-section">
         <div class="large-title">
