--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
             <%= link_to 'View All', apis_path %>
             <%= link_to 'Add New', new_api_path %>
             <%= link_to 'Random API', apis_random_path %>
+            <%= link_to 'About Us', apis_about_path %>
           </div>
         </div>
         <div class="dropdown float-right">
